subnets.tf
# 프라이빗 서브넷 생성
resource "aws_subnet" "private-ap-northeast-2a" {
  vpc_id = aws_vpc.main.id
  cidr_block = "10.0.0.0/19"
  availability_zone = "ap-northeast-2a"

  tags ={
    "Name" = "private-ap-northeast-2a"
    "kubernetes.io/role/internal-elb" = "1"
    "kubernetes.io/cluster/${var.cluster_name}" = "owned"
  }
}

resource "aws_subnet" "private-ap-northeast-2b" {
  vpc_id = aws_vpc.main.id
  cidr_block = "10.0.32.0/19"
  availability_zone = "ap-northeast-2b"

  tags={
    "Name" = "private-ap-northeast-2b"
    "kubernetes.io/role/internal-elb" = "1"
    "kubernetes.io/cluster/${var.cluster_name}" = "owned"
  } 
}


# 퍼블릭 서브넷 생성
resource "aws_subnet" "public-ap-northeast-2a" {
  vpc_id = aws_vpc.main.id
  cidr_block = "10.0.64.0/19"
  availability_zone = "ap-northeast-2a"
  map_public_ip_on_launch = true

  tags ={
    "Name" = "public-ap-northeast-2a"
    "kubernetes.io/role/elb" = "1"
    "kubernetes.io/cluster/${var.cluster_name}" = "owned"
  }
}

resource "aws_subnet" "public-ap-northeast-2b" {
  vpc_id = aws_vpc.main.id
  cidr_block = "10.0.96.0/19"
  availability_zone = "ap-northeast-2b"
  map_public_ip_on_launch = true

  tags ={
    "Name" = "public-ap-northeast-2b"
    "kubernetes.io/role/elb" = "1"
    "kubernetes.io/cluster/${var.cluster_name}" = "owned"
  }
}
